--- a/index.html
+++ b/index.html
@@ -13,44 +13,48 @@
     <body>
         <!-- Заголовок-->
         <header class="header">
-            <nav>
-                <a class="text-studio" href="/index.html"> <span class="text-web">Web</span>Studio </a>
-                <ul class="head-nav">
-                    <li> <a class="a-nav stud-act" href="./index.html">Студия</a> </li>
-                    <li> <a class="a-nav" href="./portfolio.html">Портфолио</a> </li>
-                    <li> <a class="a-nav" href="#">Контакты</a> </li>
+            <div class="container">
+                <nav>
+                    <a class="text-studio" href="/index.html"> <span class="text-web">Web</span>Studio </a>
+                    <ul class="head-nav">
+                        <li class="item"> <a class="a-nav stud-act" href="./index.html">Студия</a> </li>
+                        <li class="item"> <a class="a-nav" href="./portfolio.html">Портфолио</a> </li>
+                        <li class="item"> <a class="a-nav" href="#">Контакты</a> </li>
+                    </ul>
+                </nav>
+                <ul class="head-cont">
+                    <li class="item"> <a class="a-head" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                    <li class="item"> <a class="a-head" href="tel:+380961111111">+38 096 111 11 11</a> </li>
                 </ul>
-            </nav>
-            <ul class="head-cont">
-                <li> <a class="a-head" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li> <a class="a-head" href="tel:+380961111111">+38 096 111 11 11</a> </li>
-            </ul>
+            </div>            
         </header>
         <main>    
             <!-- 1 секция HERO -->
-            <section class="hero container">
-                <h1 class="hero-h">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="button-hero">Заказать услугу</button>        
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-h">Эффективные решения для вашего бизнеса</h1>
+                    <button type="button" class="button-hero">Заказать услугу</button>
+                </div>                        
             </section>
             <!-- 2 секция -->
             <section class="section-two">
-                <!-- h2 будет скрыт -->
+                <!-- h2 скрыт -->
                 <div class="container">
                     <h2 class="hide">Преимущества</h2>
                     <ul class="benefits">
-                        <li>
+                        <li class="item">
                             <h3 class="benefits-h">Внимание к деталям</h3>
                             <p class="benefits-p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <h3 class="benefits-h">Пунктуальность</h3>
                             <p class="benefits-p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <h3 class="benefits-h">Планирование</h3>
                             <p class="benefits-p">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
-                        <li>
+                        <li class="item">
                             <h3 class="benefits-h">Современные технологии</h3>
                             <p class="benefits-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -62,13 +66,13 @@
                 <div class="container">
                     <h2 class="options">Чем мы занимаемся</h2>
                     <ul class="options-list">
-                        <li>
+                        <li class="item">
                             <img src="./image/1.jpg" alt="алгоритм" width="370">
                         </li>
-                        <li>
+                        <li class="item">
                             <img src="./image/2.jpg" alt="для смартфонов" width="370">
                         </li>
-                        <li>
+                        <li class="item">
                             <img src="./image/3.jpg" alt="цвета" width="370">
                         </li>
                     </ul>
@@ -79,26 +83,34 @@
                 <div class="container">
                     <h2 class="team">Наша команда</h2>
                     <ul class="team-list">
-                        <li>
-                            <img  src="./image/1.1.jpg" alt="Игорь" width="270">
-                            <h3 class="member">Игорь Демьяненко</h3>
-                            <p class="job" lang="en">Product Designer</p>
-                        </li>
-                        <li>
-                            <img class="member-pic" src="./image/1.2.jpg" alt="Ольга" width="270">
-                            <h3 class="member">Ольга Репина</h3>
-                            <p class="job" lang="en">Frontend Developer</p>
-                        </li>
-                        <li>
-                            <img class="member-pic" src="./image/1.3.jpg" alt="Николай" width="270">
-                            <h3 class="member">Николай Тарасов</h3>
-                            <p class="job" lang="en">Marketing</p>
-                        </li>
-                        <li>
-                            <img class="member-pic" src="./image/1.4.jpg" alt="Михаил" width="270">
-                            <h3 class="member">Михаил Ермаков</h3>
-                            <p class="job" lang="en">UI Designer</p>
-                        </li>
+                        <div class="card">
+                            <li class="item">
+                                <img class="member-pic" src="./image/1.1.jpg" alt="Игорь" width="270">
+                                <h3 class="member">Игорь Демьяненко</h3>
+                                <p class="job" lang="en">Product Designer</p>
+                            </li>
+                        </div>
+                        <div class="card">
+                            <li class="item">
+                                <img class="member-pic" src="./image/1.2.jpg" alt="Ольга" width="270">
+                                <h3 class="member">Ольга Репина</h3>
+                                <p class="job" lang="en">Frontend Developer</p>
+                            </li>
+                        </div>
+                        <div class="card">
+                            <li class="item">
+                                <img class="member-pic" src="./image/1.3.jpg" alt="Николай" width="270">
+                                <h3 class="member">Николай Тарасов</h3>
+                                <p class="job" lang="en">Marketing</p>
+                            </li>
+                        </div>
+                        <div class="card">
+                            <li class="item">
+                                <img class="member-pic" src="./image/1.4.jpg" alt="Михаил" width="270">
+                                <h3 class="member">Михаил Ермаков</h3>
+                                <p class="job" lang="en">UI Designer</p>
+                            </li>
+                        </div>
                     </ul>
                 </div>
             </section>        
