--- a/portfolio.html
+++ b/portfolio.html
@@ -15,18 +15,20 @@
 <body>
     <!-- Заголовок-->
     <header class="header">
-        <nav>
-            <a class="text-studio" href="/index.html"> <span class="text-web">Web</span>Studio </a>
-            <ul class="head-nav">
-                <li> <a class="a-nav stud-act" href="./index.html">Студия</a> </li>
-                <li> <a class="a-nav" href="./portfolio.html">Портфолио</a> </li>
-                <li> <a class="a-nav" href="#">Контакты</a> </li>
+        <div class="container">
+            <nav>
+                <a class="text-studio" href="/index.html"> <span class="text-web">Web</span>Studio </a>
+                <ul class="head-nav">
+                    <li class="item"> <a class="a-nav stud-act" href="./index.html">Студия</a> </li>
+                    <li class="item"> <a class="a-nav" href="./portfolio.html">Портфолио</a> </li>
+                    <li class="item"> <a class="a-nav" href="#">Контакты</a> </li>
+                </ul>
+            </nav>
+            <ul class="head-cont">
+                <li class="item"> <a class="a-head" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li class="item"> <a class="a-head" href="tel:+380961111111">+38 096 111 11 11</a> </li>
             </ul>
-        </nav>
-        <ul class="head-cont">
-            <li> <a class="a-head" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a class="a-head" href="tel:+380961111111">+38 096 111 11 11</a> </li>
-        </ul>
+        </div>
     </header>
     <section>
         <div class="container">
