--- a/portfolio.html
+++ b/portfolio.html
@@ -35,60 +35,79 @@
             <!-- Фильтр услуг -->
             <h2 class="port-hide">Фильтр услуг</h2>
             <ul class="button-set">
-                <li><button type="button" class="button-portfolio">Все</button></li>
-                <li><button type="button" class="button-portfolio">Веб-сайты</button></li>
-                <li><button type="button" class="button-portfolio">Приложения</button></li>
-                <li><button type="button" class="button-portfolio">Дизайн</button></li>
-                <li><button type="button" class="button-portfolio">Маркетинг</button></li>
-            </ul>
-            <ul class="pic-set">
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.1.jpg" alt="Ноутбук">
-                    <h3 class="port-filter-h">Технокряк</h3>
-                    <p class="port-filter-p">Веб-сайт</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.2.jpg" alt="Баскетболисты">
-                    <h3 class="port-filter-h">Постер New Orlean vs Golden Star</h3>
-                    <p class="port-filter-p">Дизайн</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.3.jpg" alt="Рыба">
-                    <h3 class="port-filter-h">Ресторан Seafood</h3>
-                    <p class="port-filter-p">Приложение</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.4.jpg" alt="Наушники">
-                    <h3 class="port-filter-h">Проект Prime</h3>
-                    <p class="port-filter-p">Маркетинг</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.5.jpg" alt="Коробки">
-                    <h3 class="port-filter-h">Проект Boxes</h3>
-                    <p class="port-filter-p">Приложение</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.6.jpg" alt="Моноболок">
-                    <h3 class="port-filter-h">Inspiration has no Borders</h3>
-                    <p class="port-filter-p">Веб-сайт</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.7.jpg" alt="Журнал">
-                    <h3 class="port-filter-h">Издание Limited Edition</h3>
-                    <p class="port-filter-p">Дизайн</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.8.jpg" alt="Бирка">
-                    <h3 class="port-filter-h">Проект LAB</h3>
-                    <p class="port-filter-p">Маркетинг</p>
-                </li>
-                <li>
-                    <img class="port-pic" src="./image/portfolio/2.9.jpg" alt="Руки на ноутбуке">
-                    <h3 class="port-filter-h">Growing Business</h3>
-                    <p class="port-filter-p">Приложение</p>
-                </li>
+                <li class="item"><button type="button" class="button-portfolio">Все</button></li>
+                <li class="item"><button type="button" class="button-portfolio">Веб-сайты</button></li>
+                <li class="item"><button type="button" class="button-portfolio">Приложения</button></li>
+                <li class="item"><button type="button" class="button-portfolio">Дизайн</button></li>
+                <li class="item"><button type="button" class="button-portfolio">Маркетинг</button></li>
             </ul>
         </div>
+        <div class="container">
+            <ul class="pic-set">
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.1.jpg" alt="Ноутбук">
+                        <h3 class="port-filter-h">Технокряк</h3>
+                        <p class="port-filter-p">Веб-сайт</p>
+                    </div>
+                    
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.2.jpg" alt="Баскетболисты">
+                        <h3 class="port-filter-h">Постер New Orlean vs Golden Star</h3>
+                        <p class="port-filter-p">Дизайн</p>
+                    </div>                    
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.3.jpg" alt="Рыба">
+                        <h3 class="port-filter-h">Ресторан Seafood</h3>
+                        <p class="port-filter-p">Приложение</p>
+                    </div>                    
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.4.jpg" alt="Наушники">
+                        <h3 class="port-filter-h">Проект Prime</h3>
+                        <p class="port-filter-p">Маркетинг</p>
+                    </div>                   
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.5.jpg" alt="Коробки">
+                        <h3 class="port-filter-h">Проект Boxes</h3>
+                        <p class="port-filter-p">Приложение</p>
+                    </div>                    
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.6.jpg" alt="Моноболок">
+                        <h3 class="port-filter-h">Inspiration has no Borders</h3>
+                        <p class="port-filter-p">Веб-сайт</p>
+                    </div>                    
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.7.jpg" alt="Журнал">
+                        <h3 class="port-filter-h">Издание Limited Edition</h3>
+                        <p class="port-filter-p">Дизайн</p>
+                    </div>                    
+                </li>
+                <li class="item">
+                    <div>
+                        <img class="port-pic" src="./image/portfolio/2.8.jpg" alt="Бирка">
+                        <h3 class="port-filter-h">Проект LAB</h3>
+                        <p class="port-filter-p">Маркетинг</p>
+                    </div>                    
+                </li>
+                <li class="item">
+                    <div><img class="port-pic" src="./image/portfolio/2.9.jpg" alt="Руки на ноутбуке">
+                    <h3 class="port-filter-h">Growing Business</h3>
+                    <p class="port-filter-p">Приложение</p></div>                    
+                </li>
+            </ul>
+        </div> 
     </section>
     
     <!-- Футер -->
