--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a class="foot-web" href="/index.html"><span class="text-web">Web</span>Studio</a>
                 <address>
                     <ul class="foot-list">
-                        <li> <a class="adress" href="https://goo.gl/maps/w4182wPYShXfGa5f7" rel="noopener, noreferrer"> г. Киев, пр-т
+                        <li> <a class="adress" href="https://goo.gl/maps/w4182wPYShXfGa5f7"  rel="noopener, noreferrer" target="_blank"> г. Киев, пр-т
                                 Леси Украинки, 26 </a> </li>
                         <li> <a class="foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                         <li> <a class="foot-cont-tel" href="tel:+380961111111">+38 096 111 11 11</a> </li>
