надеюсь последние изменения

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <nav>
                 <a class="text-studio" href="/index.html"> <span class="text-web">Web</span>Studio </a>
                 <ul class="head-nav">
-                    <li class="item"> <a class="a-nav stud-act" href="./index.html">Студия</a> </li>
-                    <li class="item"> <a class="a-nav" href="./portfolio.html">Портфолио</a> </li>
+                    <li class="item"> <a class="a-nav" href="./index.html">Студия</a> </li>
+                    <li class="item"> <a class="a-nav stud-act" href="./portfolio.html">Портфолио</a> </li>
                     <li class="item"> <a class="a-nav" href="#">Контакты</a> </li>
                 </ul>
             </nav>
