--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     <h2 class="options">Чем мы занимаемся</h2>
                     <ul class="options-list">
                         <li class="item">
-                            <img src="./image/1.jpg" alt="алгоритм" width="370">
+                            <img src="./image/1.jpg" alt="Программирование" width="370" height="294">
                         </li>
                         <li class="item">
-                            <img src="./image/2.jpg" alt="для смартфонов" width="370">
+                            <img src="./image/2.jpg" alt="Приложения для смартфонов" width="370" height="294">
                         </li>
                         <li class="item">
-                            <img src="./image/3.jpg" alt="цвета" width="370">
+                            <img src="./image/3.jpg" alt="Дизайн" width="370" height="294">
                         </li>
                     </ul>
                 </div>
@@ -85,28 +85,28 @@
                     <ul class="team-list">                        
                         <li class="item">
                             <div class="card">
-                                <img class="member-pic" src="./image/1.1.jpg" alt="Игорь" width="270">
+                                <img src="./image/mem_1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
                                 <h3 class="member">Игорь Демьяненко</h3>
                                 <p class="job" lang="en">Product Designer</p>
                             </div>                                
                         </li>                   
                         <li class="item">
                             <div class="card">
-                                <img class="member-pic" src="./image/1.2.jpg" alt="Ольга" width="270">
+                                <img src="./image/mem_2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
                                 <h3 class="member">Ольга Репина</h3>
                                 <p class="job" lang="en">Frontend Developer</p>
                             </div>                            
                         </li>                    
                         <li class="item">
                             <div class="card">
-                                <img class="member-pic" src="./image/1.3.jpg" alt="Николай" width="270">
+                                <img src="./image/mem_3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
                                 <h3 class="member">Николай Тарасов</h3>
                                 <p class="job" lang="en">Marketing</p>
                             </div>                            
                         </li>                    
                         <li class="item">
                             <div class="card">
-                                <img class="member-pic" src="./image/1.4.jpg" alt="Михаил" width="270">
+                                <img src="./image/mem_4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
                                 <h3 class="member">Михаил Ермаков</h3>
                                 <p class="job" lang="en">UI Designer</p>
                             </div>                            
@@ -121,7 +121,7 @@
                 <a class="foot-web" href="/index.html"><span class="text-web">Web</span>Studio</a>
                 <address>
                     <ul class="foot-list">
-                        <li> <a class="adress" href="https://goo.gl/maps/w4182wPYShXfGa5f7"  rel="noopener, noreferrer" target="_blank"> г. Киев, пр-т
+                        <li> <a class="adress" href="https://goo.gl/maps/w4182wPYShXfGa5f7"  target="_blank" rel="noopener, noreferrer, nofollow"> г. Киев, пр-т
                                 Леси Украинки, 26 </a> </li>
                         <li> <a class="foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                         <li> <a class="foot-cont-tel" href="tel:+380961111111">+38 096 111 11 11</a> </li>
