--- a/portfolio.html
+++ b/portfolio.html
@@ -63,11 +63,10 @@
                                 <h2 class="service-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="service-description">Дизайн</p>
                             </div>                            
-                        </a>
-                
+                        </a>                
                     </li>
                     <li class="item">
-                        <div class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
+                        <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <img class="service-photo" src="./image/portfolio/2_3.jpg" alt="Приложение Seafood" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Ресторан Seafood</h2>
