--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <header class="header">
             <div class="container header-container">
                 <nav class="nav">
-                    <div class="logo-link">
-                        <a class="link logo" href="/index.html"> Web<span class="logo-black">Studio</span></a>
-                    </div>                    
+                    <a class="link logo" href="/index.html"> Web<span class="logo-black">Studio</span></a>                
                     <ul class="list header-pages">
                         <li class="item"> <a class="link active-page" href="./index.html">Студия</a> </li>
                         <li class="item"> <a class="link" href="./portfolio.html">Портфолио</a> </li>
@@ -29,7 +27,7 @@
                     <li class="item"> <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                     <li class="item"> <a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
                 </ul>
-            </div>            
+            </div>
         </header>
         <main>
             <!-- 1 секция HERO -->
@@ -37,14 +35,14 @@
                 <div class="container">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="button hero-button">Заказать услугу</button>
-                </div>                        
+                </div>
             </section>
 
             <!-- 2 секция -->
-            <section class="section benefits">      
+            <section class="section benefits">
                 <div class="container">
                     <h2 class="visually-hidden">Преимущества</h2>
-                    <ul class="list benefits-list">
+                    <ul class="list benefits-list card-set">
                         <li class="item">
                             <h3 class="benefits-title">Внимание к деталям</h3>
                             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -62,54 +60,62 @@
                             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>
-                </div>                
+                </div>
             </section>
 
             <!-- 3 секция -->
             <section class="section">
                 <div class="container">
                     <h2 class="section-title">Чем мы занимаемся</h2>
-                    <ul class="list examples-list">
+                    <ul class="list examples-list card-set">
                         <li class="item">
-                            <img class="examples-photo" src="./image/1.jpg" alt="Программирование" width="370" height="294">
+                            <img src="./image/1.jpg" alt="Программирование" width="370" height="294">
                         </li>
                         <li class="item">
-                            <img class="examples-photo" src="./image/2.jpg" alt="Приложения для смартфонов" width="370" height="294">
+                            <img src="./image/2.jpg" alt="Приложения для смартфонов" width="370" height="294">
                         </li>
                         <li class="item">
-                            <img class="examples-photo" src="./image/3.jpg" alt="Дизайн" width="370" height="294">
+                            <img src="./image/3.jpg" alt="Дизайн" width="370" height="294">
                         </li>
                     </ul>
-                </div>                
+                </div>
             </section>
 
             <!-- 4 секция -->
             <section class="section team">
                 <div class="container">
                     <h2 class="section-title">Наша команда</h2>
-                    <ul class="list team-list">
+                    <ul class="list team-list card-set">
                         <li class="item">
-                            <img class="team-photo" src="./image/mem_1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
-                            <h3 class="team-member">Игорь Демьяненко</h3>
-                            <p class="team-job" lang="en">Product Designer</p>
+                            <img src="./image/mem_1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
+                            <div class="team-content">
+                                <h3 class="team-member">Игорь Демьяненко</h3>
+                                <p class="team-job" lang="en">Product Designer</p>
+                            </div>
                         </li>
                         <li class="item">
-                            <img class="team-photo" src="./image/mem_2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
-                            <h3 class="team-member">Ольга Репина</h3>
-                            <p class="team-job" lang="en">Frontend Developer</p>
+                            <img src="./image/mem_2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
+                            <div class="team-content">
+                                <h3 class="team-member">Ольга Репина</h3>
+                                <p class="team-job" lang="en">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="item">
-                            <img class="team-photo" src="./image/mem_3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
-                            <h3 class="team-member">Николай Тарасов</h3>
-                            <p class="team-job" lang="en">Marketing</p>
+                            <img src="./image/mem_3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
+                            <div class="team-content">
+                                <h3 class="team-member">Николай Тарасов</h3>
+                                <p class="team-job" lang="en">Marketing</p>
+                            </div>
                         </li>
                         <li class="item">
-                            <img class="team-photo" src="./image/mem_4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
-                            <h3 class="team-member">Михаил Ермаков</h3>
-                            <p class="team-job" lang="en">UI Designer</p>
+                            <img src="./image/mem_4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
+                            <div class="team-content">
+                                <h3 class="team-member">Михаил Ермаков</h3>
+                                <p class="team-job" lang="en">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
-                </div>                
+                </div>
             </section>
         </main>
 
