--- a/portfolio.html
+++ b/portfolio.html
@@ -46,28 +46,28 @@
                     <li class="item"><button type="button" class="button button-portfolio">Дизайн</button></li>
                     <li class="item"><button type="button" class="button button-portfolio">Маркетинг</button></li>
                 </ul>
-                <ul class="list service-list">
+                <ul class="list service-list card-set">
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_1.jpg" alt="Веб-сайт Технокряк" width="370" height="294">
+                            <img src="./image/portfolio/2_1.jpg" alt="Веб-сайт Технокряк" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Технокряк</h2>
                                 <p class="service-description">Веб-сайт</p>
-                            </div>                            
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_2.jpg" alt="Дизайн постера" width="370" height="294">
+                            <img src="./image/portfolio/2_2.jpg" alt="Дизайн постера" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="service-description">Дизайн</p>
-                            </div>                            
-                        </a>                
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_3.jpg" alt="Приложение Seafood" width="370" height="294">
+                            <img src="./image/portfolio/2_3.jpg" alt="Приложение Seafood" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Ресторан Seafood</h2>
                                 <p class="service-description">Приложение</p>
@@ -76,7 +76,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_4.jpg" alt="Проект Prime" width="370" height="294">
+                            <img src="./image/portfolio/2_4.jpg" alt="Проект Prime" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Проект Prime</h2>
                                 <p class="service-description">Маркетинг</p>
@@ -85,7 +85,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_5.jpg" alt="Приложение Boxes" width="370" height="294">
+                            <img src="./image/portfolio/2_5.jpg" alt="Приложение Boxes" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Проект Boxes</h2>
                                 <p class="service-description">Приложение</p>
@@ -94,7 +94,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" height="294">
+                            <img src="./image/portfolio/2_6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Inspiration has no Borders</h2>
                                 <p class="service-description">Веб-сайт</p>
@@ -103,7 +103,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_7.jpg" alt="Дизайн издания Limited Edition" width="370" height="294">
+                            <img src="./image/portfolio/2_7.jpg" alt="Дизайн издания Limited Edition" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Издание Limited Edition</h2>
                                 <p class="service-description">Дизайн</p>
@@ -112,7 +112,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_8.jpg" alt="Проект LAB" width="370" height="294">
+                            <img src="./image/portfolio/2_8.jpg" alt="Проект LAB" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Проект LAB</h2>
                                 <p class="service-description">Маркетинг</p>
@@ -121,7 +121,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">
-                            <img class="service-photo" src="./image/portfolio/2_9.jpg" alt="Приложениее Growing Business" width="370" height="294">
+                            <img src="./image/portfolio/2_9.jpg" alt="Приложениее Growing Business" width="370" height="294">
                             <div class="border-card">
                                 <h2 class="service-title">Growing Business</h2>
                                 <p class="service-description">Приложение</p>
@@ -129,9 +129,9 @@
                         </a>
                     </li>
                 </ul>
-            </div>            
+            </div>
         </section>
-    </main>    
+    </main>
 
     <!-- Футер -->
     <footer class="footer">
